Minor bug fix Teams header overflowing on left side of viewport in mobile screens fixed.

--- a/client/styles/Team.module.css
+++ b/client/styles/Team.module.css
@@ -43,10 +43,10 @@
     font-size: 4rem;
     font-weight: bold;
     padding-bottom: 2rem;
-
+    
     color: var(--textColor);
     position: relative;
-
+    max-width: 80vw;
     letter-spacing: 0.08em;
 }
 
